--- a/src/app/shared/components/avatar/avatar.component.html
+++ b/src/app/shared/components/avatar/avatar.component.html
@@ -1,10 +1,10 @@
 <div class="avatar">
-  <video 
+  <video
+    #videoEl
     class="avatar__video"
-    autoplay 
-    loop 
-    muted 
+    autoplay
+    muted
     playsinline
-    [src]="videoSrc">
+    loop>
   </video>
 </div>
